<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnGetAgenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtGetAgenda" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtContactCellphone"
            android:paddingLeft="15dp"/>

        <ListView
            android:id="@+id/listViewAgenda"
            android:layout_width="match_parent"
            android:layout_height="234dp" />

        <Button
            android:id="@+id/btnSaveFirebase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSaveCloud" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtContactFirebase"
            android:paddingLeft="15dp" />

        <ListView
            android:id="@+id/listViewFirebase"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>